2009-03-23  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/diastddia.py : a new renderer implementation which 
	outputs Dia's native format, but restricted to "Standard - *"-objects.
	Initial version: buggy and incomplete (e.g. bug #576468).
	* plug-ins/python/Makefile.am : added to EXTRA_DIST
	* plug-ins/python/pydia-render.c : if the PyDia renderer does not
	implement an optional method just fall back to the base classes
	render implmentation. Also (try to) warn about missing, not optional
	methods with PyErr_Warn(), but can't find these messages yet.

	* plug-ins/python/diasvg.py : self.line_width was not initialized

	* samples/UML-demo.dia : converted to be readable, not a single line
	of uncpompresed XML.

2009-03-22  Hans Breuer  <hans@breuer.org>

	* plug-ins/UML/class_dialog.c : some more NULL pointer checks to avoid
	crash bug #576247 

2009-03-15  Hans Breuer  <hans@breuer.org>

	* doc/en/usage-objects-basic.xml : removed old workaround for DEL, we
	have put quite some work to make it behave as expected. Still it would
	be nice to have described the new text edit mode in more detail ...
	* doc/en/usage-customization.xml doc/en/graphics/file-preferences-*.png
	  doc/en/graphics/preferences-gridlines.png : updated to show the new 
	layout, also initial description of the Favorites pane. 
	Whitespace changes to have it more readable with tab width 8.
	* doc/en/graphics/preferences-fig.png : unused -> deleted
	* doc/en/Makefile.am : reflect above changes

	* doc/en/usage-objects-basic.xml en/graphics/toolbox-basic.png : 
	reflect the recent addition of the twelves basic object - Outline
	* en/usage-quickstart.xml : add more appeal(ees)

	* plug-ins/cairo/diacairo-renderer.c : some unused test-code attempting
	to work around bug #573261 but no luck.

	* plug-ins/python/allprops.py : alpha-numeric sorting by type; after 
	by number of users
	* plug-ins/python/aobjects.py : to make the resulting diagram more 