@@ -1,3 +1,10 @@
+2009-03-24  Hans Breuer  <hans@breuer.org>
+
+	* plug-ins/python/diastddia.py : almost finished, a bug left in Arc's 
+	curve_distance calculation. Implemented the insane load/save property
+	name mapping - bug #576468, implmented draw_text and draw_arc. Some 
+	comments on bezier related file format weakness.
+
 2009-03-23  Hans Breuer  <hans@breuer.org>
 
 	* plug-ins/python/diastddia.py : a new renderer implementation which 
